--- a/Named Entity Recognition/classification_NER_(improved).ipynb
+++ b/Named Entity Recognition/classification_NER_(improved).ipynb
@@ -24,12 +24,12 @@
    "metadata": {},
    "source": [
     "# Hasil\n",
-    "dari hasil sebelum di improve akurasi menunjukkan kurang lebih 30% setelah dilakukan improve akurasi mampu meningkat sekitar 60%. Fitur yang dapa"
+    "Fitur yang dapat digunakan diatas mampu memberikan pengaruh pada hasil klasifikasi. Dari hasil sebelum di improve akurasi menunjukkan kurang lebih 30% setelah dilakukan improve akurasi mampu meningkat sekitar 60%. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -403,16 +403,15 @@
     "def sent2tokens(sent):\n",
     "    return [token for token, postag, label in sent]\n",
     "\n",
-    "\n",
     "print('postag dictonary')\n",
     "print(postag_dict)\n",
     "print('token dictonary')\n",
-    "print(token_dict)\n"
+    "print(token_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +450,7 @@
        "(135,)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +476,7 @@
        "MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +532,7 @@
        "       [  20,    0,    0, ..., 9999, 9999,    7]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
